syntax = "proto3";

package tutorial.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "v1/common.proto";

option go_package = "tutorial.io/proto/v1;tutorialv1";

message Order {
  string order_id = 1;
  string member_id = 2;
  int64 created_at = 3;
}
message CreateOrderRequest {
  string member_id = 1;
}

message GetOrderRequest {
  string order_id = 1;
}

message ListOrderRequest {
  string member_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ListOrderResponse {
  repeated Order orders = 1;
  Paging paging = 2;
}

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order) {}
  rpc GetOrder(GetOrderRequest) returns (Order) {}
  rpc ListOrder(ListOrderRequest) returns (ListOrderResponse) {}
}